# stylus-workshop-gol

.github/workflows/: add-dep-updater.yml
apps/contracts-solidity/: foundry.toml  package.json
apps/contracts-solidity/test/: foundry.toml
apps/contracts-stylus/: Cargo.toml
apps/contracts-stylus/src/: lib.rs
apps/frontend/: package.json
apps/frontend/src/components/: Minter.tsx
apps/frontend/src/config/: contracts.ts
apps/frontend/src/utils/: generateGameOfLifeSVG.ts
